--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#5D5D5D</color>
+    <color name="background_main">#474747</color>
+    <color name="background_view">#5D5D5D</color>
     <color name="yellow">#FFDB59</color>
     <color name="yellow_dark">#FFD333</color>
 
