--- a/app/src/main/res/navigation/main_component.xml
+++ b/app/src/main/res/navigation/main_component.xml
@@ -3,12 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_component"
-    app:startDestination="@id/mainFragment">
+    app:startDestination="@id/topicFragment">
 
     <fragment
-        android:id="@+id/mainFragment"
+        android:id="@+id/topicFragment"
         android:name="com.example.quizpdd.ui.topic.TopicFragment"
-        android:label="fragment_main"
+        android:label="fragment_topic"
         tools:layout="@layout/fragment_topic" >
+        <action
+            android:id="@+id/action_topicFragment_to_questionFragment"
+            app:destination="@id/questionFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/questionFragment"
+        android:name="com.example.quizpdd.ui.question.QuestionFragment"
+        android:label="fragment_question"
+        tools:layout="@layout/fragment_question" >
+        <action
+            android:id="@+id/action_questionFragment_to_topicFragment"
+            app:destination="@id/topicFragment" />
     </fragment>
 </navigation>
