--- a/app/src/main/res/navigation/main_component.xml
+++ b/app/src/main/res/navigation/main_component.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_component"
-    app:startDestination="@id/topicFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/topicFragment"
@@ -21,6 +21,15 @@
         tools:layout="@layout/fragment_question" >
         <action
             android:id="@+id/action_questionFragment_to_topicFragment"
+            app:destination="@id/topicFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.quizpdd.ui.auth.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_topicFragment"
             app:destination="@id/topicFragment" />
     </fragment>
 </navigation>
