--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="@dimen/app_pading"
-    tools:context=".ui.auth.LoginFragment">
+    tools:context=".ui.auth.RegisterFragment">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -33,7 +33,7 @@
         android:layout_marginTop="12dp"
         android:autofillHints="emailAddress"
         android:hint="@string/enter_your_email"
-        android:inputType="textEmailAddress" />
+        android:inputType="textEmailAddress"/>
 
     <EditText
         android:id="@+id/password_edit_text"
@@ -44,23 +44,22 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/login_btn"
+        android:id="@+id/register_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:backgroundTint="@color/yellow_dark"
         android:padding="12dp"
-        android:text="@string/login"
+        android:text="@string/register"
         android:textColor="@color/background_main"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/register_text_view"
+        android:id="@+id/login_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/register"
+        android:text="@string/login"
         android:textColor="@color/yellow_dark"
         android:textSize="18sp" />
-
 </LinearLayout>
