--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="@dimen/app_pading"
-    tools:context=".ui.auth.LoginFragment">
+    tools:context=".ui.auth.login.LoginFragment">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -43,16 +43,30 @@
         android:hint="@string/enter_your_password"
         android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/login_btn"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="@color/yellow_dark"
-        android:padding="12dp"
-        android:text="@string/login"
-        android:textColor="@color/background_main"
-        android:textSize="18sp" />
+        android:layout_marginTop="24dp">
+
+        <Button
+            android:id="@+id/login_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/yellow_dark"
+            android:padding="12dp"
+            android:text="@string/login"
+            android:textColor="@color/background_main"
+            android:textSize="18sp" />
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"/>
+    </FrameLayout>
+
+
 
     <TextView
         android:id="@+id/register_text_view"
