--- a/app/src/main/res/navigation/main_component.xml
+++ b/app/src/main/res/navigation/main_component.xml
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.example.quizpdd.ui.auth.LoginFragment"
+        android:name="com.example.quizpdd.ui.auth.login.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -41,7 +41,7 @@
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.example.quizpdd.ui.auth.RegisterFragment"
+        android:name="com.example.quizpdd.ui.auth.register.RegisterFragment"
         android:label="fragment_register"
         tools:layout="@layout/fragment_register" >
         <action
