--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -33,33 +33,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        tools:text="Question 1"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:drawableLeftCompat="@drawable/study_svgrepo_com"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/back_text_view" />
+        app:layout_constraintTop_toBottomOf="@id/back_text_view"
+        tools:text="Question 1" />
 
     <TextView
         android:id="@+id/question_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        tools:text="Что должно иметь решающее значение при выборе водителем скорости движения в тёмное время суток?"
         android:textColor="@color/yellow_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/question_number_text_view" />
+        app:layout_constraintTop_toBottomOf="@id/question_number_text_view"
+        tools:text="Что должно иметь решающее значение при выборе водителем скорости движения в тёмное время суток?" />
 
     <ImageView
         android:id="@+id/question_image_view"
         android:layout_width="0dp"
         android:layout_height="150dp"
         android:layout_marginTop="16dp"
+        android:importantForAccessibility="no"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/question_text_view"
-        android:importantForAccessibility="no" />
+        app:layout_constraintTop_toBottomOf="@id/question_text_view" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -104,21 +104,21 @@
         android:id="@+id/next_question_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="24dp"
         android:text="@string/next_question"
-        android:layout_marginBottom="24dp"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <FrameLayout
         android:id="@+id/progress_bar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/back_text_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/background_main"
         android:visibility="gone"
-        android:background="@color/background_main">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/back_text_view">
 
         <ProgressBar
             android:layout_width="wrap_content"
@@ -130,32 +130,34 @@
         android:id="@+id/result_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/back_text_view"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone"
         android:background="@color/background_main"
+        android:gravity="center"
         android:orientation="vertical"
-        android:gravity="center">
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/back_text_view">
 
         <TextView
             android:id="@+id/result_title_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="@string/excellent"
+            android:textColor="@color/yellow_dark"
             android:textSize="36sp"
-            android:textColor="@color/yellow_dark"/>
+            tools:text="@string/excellent" />
+
         <TextView
             android:id="@+id/result_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Результат: 10/10"
-            android:textColor="@color/yellow_dark"/>
+            android:textColor="@color/yellow_dark"
+            tools:text="Результат: 10/10" />
+
         <ImageView
             android:id="@+id/result_image_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/exellent"/>
+            android:src="@drawable/exellent" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
