--- a/app/src/main/res/layout/fragment_topic.xml
+++ b/app/src/main/res/layout/fragment_topic.xml
@@ -35,9 +35,9 @@
                 android:id="@+id/back_arrow_btn"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
+                android:importantForAccessibility="no"
                 android:src="@drawable/baseline_arrow_back_ios_24"
-                app:tint="@color/yellow_dark"
-                android:importantForAccessibility="no" />
+                app:tint="@color/yellow_dark" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -46,32 +46,6 @@
                 android:text="@string/back"
                 android:textColor="@color/yellow_dark" />
         </LinearLayout>
-
-        <com.google.android.material.button.MaterialButtonToggleGroup
-            android:id="@+id/toggleButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:selectionRequired="true"
-            app:singleSelection="true">
-
-            <Button
-                android:id="@+id/study_button"
-                style="@style/App.Material3.Button.OutlinedButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/study" />
-
-            <Button
-                android:id="@+id/training_button"
-                style="@style/App.Material3.Button.OutlinedButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/training" />
-
-        </com.google.android.material.button.MaterialButtonToggleGroup>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_theme"
